# bezier_curve

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: build_options.cmake  googletest-download.cmake  googletest.cmake  matplotlibcpp-download.cmake  matplotlibcpp.cmake  utility.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt  ClosestPointsToCurve.cpp  Ex1.cpp  Ex2DPoints.cpp  Ex3DPoints.cpp  ExApproximateLength.cpp  ExBoundingBox.cpp  ExPolynomial.cpp  ExPolynomial1D.cpp  ExUserDefinedPointType.cpp
include/bezier/: Bezier.hpp  NumericalMaths.hpp  PowerBasisPolynomial.hpp  PowerBasisPolynomial1D.hpp  SturmSequence.hpp  Types.hpp
src/: CMakeLists.txt
src/bezier/: Bezier.cpp  NumericalMaths.cpp  Types.cpp
tests/: CMakeLists.txt  TestBezier.cpp  TestPolynomial.cpp  TestPolynomial1D.cpp
